--- a/template/add-product.html
+++ b/template/add-product.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Add Product - Dashboard Admin Template</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/tooplate.css">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'jquery-ui-datepicker/jquery-ui.min.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tooplate.css' %}">
 </head>
 
 <body class="bg02">
@@ -88,38 +88,58 @@
                     </div>
                     <div class="row mt-4 tm-edit-product-row">
                         <div class="col-xl-7 col-lg-7 col-md-12">
-                            <form action="" class="tm-edit-product-form">
+
+                            <form action="{% url 'product:add_product' %}"
+                                  class="tm-edit-product-form"
+                                  method="POST"
+                             >
+                                {% csrf_token %}
                                 <div class="input-group mb-3">
                                     <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Product
                                         Name
                                     </label>
-                                    <input id="name" name="name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                    <!-- <input id="name" name="product_name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"> -->
+                                    {{form.product_name}}
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="description" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">Description</label>
-                                    <textarea class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" required></textarea>
+                                    <textarea class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" name="description" rows="3" required></textarea>
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="category" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Category</label>
-                                    <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="category">
+                                    <!-- <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="category">
                                         <option selected>Select one</option>
                                         <option value="1">Cras efficitur lacus</option>
                                         <option value="2">Pellentesque molestie</option>
                                         <option value="3">Sed feugiat nulla</option>
-                                    </select>
+                                    </select> -->
+                                    {{form.category}}
+
                                 </div>
                                 <div class="input-group mb-3">
-                                    <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
+                                     <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
                                         Date
                                     </label>
-                                    <input id="expire_date" name="expire_date" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
-                                        data-large-mode="true">
+                                    <!-- <input id="expire_date" name="expire_date" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
+                                        data-large-mode="true"> -->
+                                    {{form.expire_date}}
+
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="stock" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Units In
                                         Stock
                                     </label>
-                                    <input id="stock" name="stock" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7">
+                                    <!-- <input id="stock" name="in_stock" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7"> -->
+                                    {{form.in_stock}}
+                                </div>
+                                <div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
+                                    <div class="tm-product-img-dummy mx-auto">
+                                        <i class="fas fa-5x fa-cloud-upload-alt" onclick="document.getElementById('fileInput').click();"></i>
+                                    </div>
+                                    <div class="custom-file mt-3 mb-3">
+                                        <input id="fileInput" type="file" style="display:none;" />
+                                        {{form.image}}
+                                    </div>
                                 </div>
                                 <div class="input-group mb-3">
                                     <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
@@ -129,16 +149,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
-                            <div class="tm-product-img-dummy mx-auto">
-                                <i class="fas fa-5x fa-cloud-upload-alt" onclick="document.getElementById('fileInput').click();"></i>
-                            </div>
-                            <div class="custom-file mt-3 mb-3">
-                                <input id="fileInput" type="file" style="display:none;" />
-                                <input type="button" class="btn btn-primary d-block mx-auto" value="Upload ..." onclick="document.getElementById('fileInput').click();"
-                                />
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
@@ -153,9 +164,9 @@
         </footer>
     </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'jquery-ui-datepicker/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script>
         $(function () {
             $('#expire_date').datepicker();
