--- a/template/products.html
+++ b/template/products.html
@@ -87,7 +87,7 @@
 
                             </div>
                             <div class="col-md-4 col-sm-12 text-right">
-                                <a href="add-product.html" class="btn btn-small btn-primary">Add New Product</a>
+                                <a href="{%url 'product:add_product'%}" class="btn btn-small btn-primary">Add New Product</a>
                             </div>
                         </div>
                         <div class="table-responsive">
@@ -103,86 +103,19 @@
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    {% for product in products %}
                                     <tr>
                                         <th scope="row">
                                             <input type="checkbox" aria-label="Checkbox">
                                         </th>
-                                        <td class="tm-product-name">1. In malesuada placerat (hover)</td>
-                                        <td class="text-center">145</td>
-                                        <td class="text-center">255</td>
-                                        <td>2018-10-28</td>
+                                        <td class="tm-product-name">{{product.id}}. {{product.product_name}}</td>
+                                        <td class="text-center">{{product.in_stock}}</td>
+                                        <td class="text-center">{{product.units_sold}}</td>
+                                        <td>{{product.expire_date}}</td>
                                         <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
                                     </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">2. Aenean eget urna enim. Sed enim</td>
-                                        <td class="text-center">240</td>
-                                        <td class="text-center">260</td>
-                                        <td>2018-10-24</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">3. Vivamus convallis tincidunt nisi</td>
-                                        <td class="text-center">360</td>
-                                        <td class="text-center">440</td>
-                                        <td>2019-02-14</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">4. Donec semper massa eget</td>
-                                        <td class="text-center">445</td>
-                                        <td class="text-center">655</td>
-                                        <td>2019-03-22</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">5. Donec semper massa eget</td>
-                                        <td class="text-center">445</td>
-                                        <td class="text-center">655</td>
-                                        <td>2019-03-22</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">6. Donec semper massa eget</td>
-                                        <td class="text-center">445</td>
-                                        <td class="text-center">655</td>
-                                        <td>2019-03-22</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">7. Donec semper massa eget</td>
-                                        <td class="text-center">445</td>
-                                        <td class="text-center">655</td>
-                                        <td>2019-03-22</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
-                                    <tr>
-                                        <th scope="row">
-                                            <input type="checkbox" aria-label="Checkbox">
-                                        </th>
-                                        <td class="tm-product-name">8. Donec semper massa eget</td>
-                                        <td class="text-center">445</td>
-                                        <td class="text-center">655</td>
-                                        <td>2019-03-22</td>
-                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                    </tr>
+                                    {% endfor %}
+                                    
                                 </tbody>
                             </table>
                         </div>
@@ -210,47 +143,17 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-12 tm-md-12 tm-sm-12 tm-col">
+                <div id="filter" class="col-xl-4 col-lg-12 tm-md-12 tm-sm-12 tm-col">
                     <div class="bg-white tm-block h-100">
                         <h2 class="tm-block-title d-inline-block">Product Categories</h2>
                         <table class="table table-hover table-striped mt-3">
                             <tbody>
+                                {% for category_name in categories %}
                                 <tr>
-                                    <td>1. Cras efficitur lacus</td>
+                                    <td><a class="$gray-800" href="{% url 'product:category' %}?category={{category_name.name}}" target="blank" class="active">{{category_name.id}}.{{category_name.name}}</a></td>
                                     <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
                                 </tr>
-                                <tr>
-                                    <td>2. Pellentesque molestie</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>3. Sed feugiat nulla</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>4. Vestibulum varius arcu</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>5. Aenean eget urna enim</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>6. Condimentum viverra</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>7. In malesuada</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>8. Placerat</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
-                                <tr>
-                                    <td>9. Donec semper</td>
-                                    <td class="tm-trash-icon-cell"><i class="fas fa-trash-alt tm-trash-icon"></i></td>
-                                </tr>
+                                {% endfor %}
                             </tbody>
                         </table>
 
@@ -276,6 +179,43 @@
                 window.location.href = "edit-product.html";
             });
         })
+        $('table tr td a').on('click', function(e){
+			e.preventDefault();
+			var $this = $(this);
+			var url = $this.attr("href")
+			console.log("sdddddddddddddddd");
+			
+			$.ajax({
+				type:"GET",
+				url:url,
+				data: $(this).serialize(),
+				dataType:"json",
+				success: function(data) {
+					var r_data = data.response_data.data
+					let html_data = ""
+					r_data.forEach((product_data) => {
+						html_data += `<tr>
+                                        <th scope="row">
+                                            <input type="checkbox" aria-label="Checkbox">
+                                        </th>
+                                        <td class="tm-product-name">1. ${product_data.product_name}</td>
+                                        <td class="text-center">${product_data.in_stock}</td>
+                                        <td class="text-center">${product_data.units_sold}</td>
+                                        <td>${product_data.expire_date}}</td>
+                                        <td><i class="fas fa-trash-alt tm-trash-icon"></i></td>
+                                    </tr>`
+						console.log(product_data);
+					})
+					$(".table-responsive table tbody").html(html_data)
+				},
+				failure: function(data) { 
+					alert('Got an error dude');
+				},
+				processData:false,
+				contentType:false,
+				cache:false,
+			})
+		});
     </script>
 </body>
 
