delete function updated

--- a/template/edit-product.html
+++ b/template/edit-product.html
@@ -8,10 +8,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Edit Product - Dashboard Template</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="jquery-ui-datepicker/jquery-ui.min.css" type="text/css" />
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/tooplate.css">
+    <link rel="stylesheet" href="{% static 'css/fontawesome.min.css' %}">
+    <link rel="stylesheet" href="{% static 'jquery-ui-datepicker/jquery-ui.min.css' %}" type="text/css" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tooplate.css' %}">
 </head>
 
 <body class="bg02">
@@ -31,7 +31,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Dashboard
+                                <a class="nav-link" href="{% url 'web:index' %}">Dashboard
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
@@ -47,7 +47,7 @@
                                 </div>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="{% url 'product:product' %}">Products</a>
                             </li>
 
                             <li class="nav-item">
@@ -67,7 +67,7 @@
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link d-flex" href="login.html">
+                                <a class="nav-link d-flex" href="{% url 'user:user_logout' %}">
                                     <i class="far fa-user mr-2 tm-logout-icon"></i>
                                     <span>Logout</span>
                                 </a>
@@ -87,37 +87,43 @@
                     </div>
                     <div class="row mt-4 tm-edit-product-row">
                         <div class="col-xl-7 col-lg-7 col-md-12">
-                            <form action="" class="tm-edit-product-form">
+                            <form action="{% url 'product:update' pk=product.pk %}" method="POST" class="tm-edit-product-form" enctype="multipart/form-data">
+                                {% csrf_token %}
                                 <div class="input-group mb-3">
                                     <label for="name" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Product
                                         Name
                                     </label>
-                                    <input placeholder="Product name" value="In malesuada placerat" id="name" name="name" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7">
+                                    {{form.product_name}}
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="description" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 mb-2">Description</label>
-                                    <textarea class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" rows="3" placeholder="Product Description" required>Fusce finibus dui tellus, at viverra dui dignissim hendrerit. Sed a varius nulla. Donec auctor consectetur nulla.</textarea>
+                                    {{form.description}}
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="category" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Category</label>
-                                    <select class="custom-select col-xl-9 col-lg-8 col-md-8 col-sm-7" id="category">
-                                        <option value="1" selected>Cras efficitur lacus</option>
-                                        <option value="2">Pellentesque molestie</option>
-                                        <option value="3">Sed feugiat nulla</option>
-                                    </select>
+                                    {{form.category}}
+                                    
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="expire_date" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Expire
                                         Date
                                     </label>
-                                    <input placeholder="Expire Date" value="2018-10-28" id="expire_date" name="expire_date" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
-                                        data-large-mode="true">
+                                    {{form.expire_date}}
+                                   
                                 </div>
                                 <div class="input-group mb-3">
                                     <label for="stock" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Units In
                                         Stock
                                     </label>
-                                    <input placeholder="Stock" value="255" id="stock" name="stock" type="text" class="form-control validate col-xl-9 col-lg-8 col-md-7 col-sm-7">
+                                    {{form.in_stock}}
+
+                                </div>
+                                
+                                <div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
+                                    <div class="custom-file mt-3 mb-3">
+                                        <input id="fileInput" type="file" style="display:none;" />
+                                       {{form.image}}
+                                    </div>
                                 </div>
                                 <div class="input-group mb-3">
                                     <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
@@ -127,14 +133,7 @@
                                 </div>
                             </form>
                         </div>
-                        <div class="col-xl-4 col-lg-4 col-md-12 mx-auto mb-4">
-                            <img src="img/product-image.jpg" alt="Profile Image" class="img-fluid mx-auto d-block">
-                            <div class="custom-file mt-3 mb-3">
-                                <input id="fileInput" type="file" style="display:none;" />
-                                <input type="button" class="btn btn-primary d-block mx-auto" value="Upload ..." onclick="document.getElementById('fileInput').click();"
-                                />
-                            </div>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -149,9 +148,9 @@
         </footer>
     </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="jquery-ui-datepicker/jquery-ui.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'jquery-ui-datepicker/jquery-ui.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script>
         $(function () {
             $('#expire_date').datepicker();
