--- a/template/add-product.html
+++ b/template/add-product.html
@@ -31,7 +31,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link" href="index.html">Dashboard
+                                <a class="nav-link" href="{% url 'web:index' %}">Dashboard
                                     <span class="sr-only">(current)</span>
                                 </a>
                             </li>
@@ -47,7 +47,7 @@
                                 </div>
                             </li>
                             <li class="nav-item active">
-                                <a class="nav-link" href="products.html">Products</a>
+                                <a class="nav-link" href="{% url 'product:product' %}">Products</a>
                             </li>
 
                             <li class="nav-item">
@@ -67,7 +67,7 @@
                         </ul>
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link d-flex" href="login.html">
+                                <a class="nav-link d-flex" href="{% url 'user:user_logout' %}">
                                     <i class="far fa-user mr-2 tm-logout-icon"></i>
                                     <span>Logout</span>
                                 </a>
